# nevla-vln

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md
ai_module/: PC_SETUP.md
ai_module/docker/: Dockerfile
ai_module/src/tare_planner/: CMakeLists.txt  package.xml
ai_module/src/vlm_node/vlm_node/: constants.py  vlm_reasoning_node.py
ai_module/src/vln_orchestrator/: PERCEPTION.md  README.md  package.xml  setup.cfg  setup.py
ai_module/src/vln_orchestrator/config/: challenge_classes.yaml  orchestrator.yaml
ai_module/src/vln_orchestrator/launch/: full_system.launch.py  vln_orchestrator.launch.py
ai_module/src/vln_orchestrator/test/: test_decomposition.py  test_explorer.py  test_instruction_parser.py  test_question_router.py  test_semantic_map_adapter.py  test_spatial_counting.py
ai_module/src/vln_orchestrator/vln_orchestrator/: orchestrator_node.py  question_router.py
ai_module/src/vln_orchestrator/vln_orchestrator/exploration/: explorer.py
ai_module/src/vln_orchestrator/vln_orchestrator/handlers/: base.py  instruction_following.py  numerical.py  object_reference.py
ai_module/src/vln_orchestrator/vln_orchestrator/perception/: semantic_map_adapter.py
ai_module/src/vln_orchestrator/vln_orchestrator/reasoning/: counting.py  decomposition.py  instruction_parser.py  spatial.py  verification.py  vlm_client.py
eval_harness/: README.md  apply_objref_gt.py  build_challenge_vocab.py  build_ground_truth.py  build_objref_candidates.py  challenge_vocab_report.txt  colab_perception_benchmark.ipynb  ground_truth.json  scoring.py  suggest_objref_gt.py  test_scoring.py  viz_objref.py  vla3d.py
